--- a/views/form.ejs
+++ b/views/form.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-  <title>Icici Bank</title>
+  <title>Axis Bank</title>
   <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <style>
